# yt-summary-skill

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  cookies.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: architect.md  feature-engineer.md  file-ops.md  fix-engineer.md  quality-engineer.md
.claude/commands/: commit.md  init.md  pr.md  push.md  upgrade.md
.claude/rules/: orchestrator.md
.claude/skills/ai-metrics/: SKILL.md
.claude/skills/ai-metrics/scripts/: ai-metrics.sh
docs/: plan-read-status-flag.md  subscription-batch-plan.md
scripts/: check_rate_limit.py  deploy-skill.sh  export_cookies.py  fetch_playlist.py  fetch_transcript.py  filter_cookies.py  migrate_to_markdown.py  reorganize_cache.py  save_summary.py  test_transcript_api.py
tests/: test_cache.py  test_config.py  test_filter.py  test_main.py  test_markdown.py  test_metadata.py  test_playlist.py  test_subscriptions.py  test_summarizer.py  test_transcript.py  test_youtube_api.py  test_youtube_utils.py
yt_summary/: __init__.py  cache.py  config.py  filter.py  logging.py  markdown.py  metadata.py  playlist.py  subscriptions.py  summarizer.py  transcript.py  youtube_api.py  youtube_utils.py
