[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-summary"
version = "0.1.0"
description = "Summarize YouTube videos using Claude AI"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
yt-summary = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.7.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP017", # Use datetime.UTC alias - keep timezone.utc for Python 3.10 compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["yt_summary"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=yt_summary --cov-report=term-missing"
